--- a/index.html
+++ b/index.html
@@ -139,13 +139,26 @@
                 </div>
             </div>
         </section>
+
         <section class="cover">
             <div class="cover__overlay">
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до Байкала
-                на электричках.</p>
+                <h2 class="cover__title">До Байкала «на собаках»</h2>
+                <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до
+                    Байкала
+                    на электричках.</p>
             </div>
         </section>
+
+        <footer class="footer">
+            <ul class="footer__links">
+                <li><a href="" class="footer__link">Карты</a></li>
+                <li><a href="" class="footer__link">Погода</a></li>
+                <li><a href="" class="footer__link">Расписание</a></li>
+                <li><a href="" class="footer__link">Календарь</a></li>
+                <li><a href="" class="footer__link">Путешествия</a></li>
+            </ul>
+            <p class="footer__copyright">&copy; 2020. Максим Басов</p>
+        </footer>
     </div>
 
 </body>
