--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <img src="images/lead-polka.jpg" alt="Полка" class="lead__image">
+            <div class="lead__image">
+            </div>
             <p class="lead__caption">ваша полка — верхняя</p>
         </section>
         <section class="intro">
@@ -57,7 +58,7 @@
                 <img src="images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                 <div class="place__website">
                     <p class="place__website_url-heading">url</p>
-                    <a href="#" class="place__website_link">park-kosa.ru</a>
+                    <a href="http://park-kosa.ru" class="place__website_link">park-kosa.ru</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
@@ -75,7 +76,8 @@
                 <img src="images/place-kolsky.jpg" alt="Кольский" class="place__image">
                 <div class="place__website">
                     <p class="place__website_url-heading">url</p>
-                    <a href="#" class="place__website_link">National Geographic</a>
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                        class="place__website_link">National Geographic</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
@@ -92,7 +94,8 @@
                 <img src="images/place-altai.jpg" alt="Алтай" class="place__image">
                 <div class="place__website">
                     <p class="place__website_url-heading">url</p>
-                    <a href="#" class="place__website_link">Facebook</a>
+                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                        class="place__website_link">Facebook</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Алтай — одно из красивейших мест в России.
@@ -109,7 +112,7 @@
                 <img src="images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
                 <div class="place__website">
                     <p class="place__website_url-heading">url</p>
-                    <a href="#" class="place__website_link">https://vk.com/baikalmile</a>
+                    <a href="https://vk.com/baikalmile" class="place__website_link">https://vk.com/baikalmile</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Всем известен Байкал как крупнейшее озеро
@@ -126,7 +129,7 @@
                 <img src="images/place-karelia.jpg" alt="Карелия" class="place__image">
                 <div class="place__website">
                     <p class="place__website_url-heading">url</p>
-                    <a href="#" class="place__website_link">http://vodlozero.ru/</a>
+                    <a href="http://vodlozero.ru" class="place__website_link">http://vodlozero.ru/</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт
@@ -140,22 +143,24 @@
             </div>
         </section>
 
-        <section class="cover">
-            <div class="cover__overlay">
+        <a class=link href="https://stampsy.com/na-elektrichkakh-do-baikala">
+            <section class="cover">
+
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до
                     Байкала
                     на электричках.</p>
-            </div>
-        </section>
+
+            </section>
+        </a>
 
         <footer class="footer">
             <ul class="footer__links">
-                <li><a href="" class="footer__link">Карты</a></li>
-                <li><a href="" class="footer__link">Погода</a></li>
-                <li><a href="" class="footer__link">Расписание</a></li>
-                <li><a href="" class="footer__link">Календарь</a></li>
-                <li><a href="" class="footer__link">Путешествия</a></li>
+                <li><a href="https://yandex.ru/maps" class="link footer__link">Карты</a></li>
+                <li><a href="https://yandex.ru/pogoda" class="link footer__link">Погода</a></li>
+                <li><a href="https://rasp.yandex.ru" class="link footer__link">Расписание</a></li>
+                <li><a href="https://calendar.yandex.ru" class="link footer__link">Календарь</a></li>
+                <li><a href="https://travel.yandex.ru" class="link footer__link">Путешествия</a></li>
             </ul>
             <p class="footer__copyright">&copy; 2020. Максим Басов</p>
         </footer>
