--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <img src="images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                 <div class="place__website">
                     <p class="place__website_url-heading">url</p>
-                    <a href="http://park-kosa.ru" class="place__website_link">park-kosa.ru</a>
+                    <a href="http://park-kosa.ru" target="_blank" class="place__website_link">park-kosa.ru</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
@@ -76,7 +76,7 @@
                 <img src="images/place-kolsky.jpg" alt="Кольский" class="place__image">
                 <div class="place__website">
                     <p class="place__website_url-heading">url</p>
-                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy"
+                    <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank"
                         class="place__website_link">National Geographic</a>
                 </div>
                 <div class="place__paragraph">
@@ -94,7 +94,7 @@
                 <img src="images/place-altai.jpg" alt="Алтай" class="place__image">
                 <div class="place__website">
                     <p class="place__website_url-heading">url</p>
-                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822"
+                    <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank"
                         class="place__website_link">Facebook</a>
                 </div>
                 <div class="place__paragraph">
@@ -112,7 +112,8 @@
                 <img src="images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
                 <div class="place__website">
                     <p class="place__website_url-heading">url</p>
-                    <a href="https://vk.com/baikalmile" class="place__website_link">https://vk.com/baikalmile</a>
+                    <a href="https://vk.com/baikalmile" target="_blank"
+                        class="place__website_link">https://vk.com/baikalmile</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Всем известен Байкал как крупнейшее озеро
@@ -129,7 +130,7 @@
                 <img src="images/place-karelia.jpg" alt="Карелия" class="place__image">
                 <div class="place__website">
                     <p class="place__website_url-heading">url</p>
-                    <a href="http://vodlozero.ru" class="place__website_link">http://vodlozero.ru/</a>
+                    <a href="http://vodlozero.ru" target="_blank" class="place__website_link">http://vodlozero.ru/</a>
                 </div>
                 <p class="place__paragraph">
                     Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт
@@ -143,7 +144,7 @@
             </div>
         </section>
 
-        <a class=link href="https://stampsy.com/na-elektrichkakh-do-baikala">
+        <a class=link href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
             <section class="cover">
 
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
@@ -156,11 +157,11 @@
 
         <footer class="footer">
             <ul class="footer__links">
-                <li><a href="https://yandex.ru/maps" class="link footer__link">Карты</a></li>
-                <li><a href="https://yandex.ru/pogoda" class="link footer__link">Погода</a></li>
-                <li><a href="https://rasp.yandex.ru" class="link footer__link">Расписание</a></li>
-                <li><a href="https://calendar.yandex.ru" class="link footer__link">Календарь</a></li>
-                <li><a href="https://travel.yandex.ru" class="link footer__link">Путешествия</a></li>
+                <li><a href="https://yandex.ru/maps" target="_blank" class="link footer__link">Карты</a></li>
+                <li><a href="https://yandex.ru/pogoda" target="_blank" class="link footer__link">Погода</a></li>
+                <li><a href="https://rasp.yandex.ru" target="_blank" class="link footer__link">Расписание</a></li>
+                <li><a href="https://calendar.yandex.ru" target="_blank" class="link footer__link">Календарь</a></li>
+                <li><a href="https://travel.yandex.ru" target="_blank" class="link footer__link">Путешествия</a></li>
             </ul>
             <p class="footer__copyright">&copy; 2020. Максим Басов</p>
         </footer>
