--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="page">
         <header class="header">
             <img src="images/header-logo.svg" alt="Россия" class="header__logo">
-            <p><a href="#" class="logo__lang-link">Ru</a>
-                <a href="#" class="logo__lang-link">En</a></p>
+            <p><a href="#" class="header__lang-link">Ru</a>
+                <a href="#" class="header__lang-link">En</a></p>
         </header>
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
