--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
                 <h2 class="place__title">Куршская коса</h2>
                 <img src="images/place-kosa.jpg" alt="Куршская коса" class="place__image">
                 <div class="place__website">
-                    <p class="place__website_url-heading">url</p>
-                    <a href="http://park-kosa.ru" target="_blank" class="place__website_link">park-kosa.ru</a>
+                    <p class="place__url-heading">url</p>
+                    <a href="http://park-kosa.ru" target="_blank" class="place__link">park-kosa.ru</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта
@@ -75,9 +75,9 @@
                 <h2 class="place__title">Кольский</h2>
                 <img src="images/place-kolsky.jpg" alt="Кольский" class="place__image">
                 <div class="place__website">
-                    <p class="place__website_url-heading">url</p>
+                    <p class="place__url-heading">url</p>
                     <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank"
-                        class="place__website_link">National Geographic</a>
+                        class="place__link">National Geographic</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Почти весь полуостров находится за Полярным кругом. Саамская тундра, от которой на юг —
@@ -93,9 +93,9 @@
                 <h2 class="place__title">Алтай</h2>
                 <img src="images/place-altai.jpg" alt="Алтай" class="place__image">
                 <div class="place__website">
-                    <p class="place__website_url-heading">url</p>
+                    <p class="place__url-heading">url</p>
                     <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank"
-                        class="place__website_link">Facebook</a>
+                        class="place__link">Facebook</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Алтай — одно из красивейших мест в России.
@@ -111,9 +111,9 @@
                 <h2 class="place__title">Зимний Байкал</h2>
                 <img src="images/place-winter-baikal.jpg" alt="Зимний Байкал" class="place__image">
                 <div class="place__website">
-                    <p class="place__website_url-heading">url</p>
+                    <p class="place__url-heading">url</p>
                     <a href="https://vk.com/baikalmile" target="_blank"
-                        class="place__website_link">https://vk.com/baikalmile</a>
+                        class="place__link">https://vk.com/baikalmile</a>
                 </div>
                 <div class="place__paragraph">
                     <p>Всем известен Байкал как крупнейшее озеро
@@ -129,8 +129,8 @@
                 <h2 class="place__title">Карелия</h2>
                 <img src="images/place-karelia.jpg" alt="Карелия" class="place__image">
                 <div class="place__website">
-                    <p class="place__website_url-heading">url</p>
-                    <a href="http://vodlozero.ru" target="_blank" class="place__website_link">http://vodlozero.ru/</a>
+                    <p class="place__url-heading">url</p>
+                    <a href="http://vodlozero.ru" target="_blank" class="place__link">http://vodlozero.ru/</a>
                 </div>
                 <p class="place__paragraph">
                     Сибирь заканчивается не на Урале, а в Карелии: образующая тайгу сибирская лиственница не растёт
