--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <p class="header__lang"><a href="#" class="link header__lang-link header__lang-link_active">Ru</a>
                 <a href="#" class="link header__lang-link">En</a></p>
         </header>
-       <main class="content">
+        <main class="content">
             <section class="lead">
                 <h1 class="lead__title">Путешествия по России</h1>
                 <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
@@ -164,12 +164,12 @@
 
 
             <section class="cover">
-                <a class="link cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank"></a>
+                <a class="link cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
 
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до
-                    Байкала
-                    на электричках.</p>
+                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до
+                        Байкала
+                        на электричках.</p>
                 </a>
             </section>
 
