--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@
 
 
             <section class="cover">
-                <a class="link cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+                <a class="link cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank"></a>
 
                     <h2 class="cover__title">До Байкала «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до
                         Байкала
                         на электричках.</p>
-                </a>
+                
             </section>
 
         </main>
