--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>russian-travel</title>
     <link rel="stylesheet" href="./pages/index.css">
 </head>
@@ -164,12 +164,12 @@
 
 
             <section class="cover">
-                <a class="link cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank"></a>
+                <a class="link cover__link" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
 
-                    <h2 class="cover__title">До Байкала «на собаках»</h2>
+                    <h2 class="cover__title">До Байкала<br> «на собаках»</h2>
                     <p class="cover__subtitle">По мотивам учебной темы о Транссибе и iframes — путешествие от столицы до
                         Байкала
-                        на электричках.</p>
+                        на электричках.</p></a>
                 
             </section>
 
